--- a/index.html
+++ b/index.html
@@ -1,48 +1,55 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<head>
-  <meta charset="UTF-8">
-  <title>Activity 1: Basic HTML Bio</title>
-</head>
-
+    <head>
+        <meta charset="UTF-8">
+        <title>My Personal Bio Test</title>
+    </head>
 <body>
+    <h1>This is the Grand Biography of the Noble Andrew J. Francis</h1>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/2/2a/Jonathan_Goldsmith_2009.jpg" 
+    alt="Image" height="500" width="350" alt="Andrew Francis">
+    <section id="Information">
 
-  <h1>Andrew Francis</h1>
+    <p>This is the first paragraph</p>
 
-  <img src="http://lorempixel.com/400/200/" alt="Random Pic">
+    <p>This is the second paragraph</p>
 
-  <p>Write a short paragraph about yourself or some placeholder text.</p>
-  <p>A second short paragraph about yourself or some placeholder text.</p>
+    <ul>
+        <li><strong>Gmail:</strong> <a href="#">AndrewJ.Francis@gmail.com</a></li>
+        <li><strong>Github:</strong> <a href="#">AndrewJFrancis</a></li>
+        <li><em>Place of Work</em> <a href="#">AJ.Francis</a></li>
+        <li><strong>LinkedIn</strong><a href="#"> Hoity Toity I hate LinkedIn</li>
+    </ul>
 
-  <ul>
-    <li><strong>Email:</strong> <a href="#">ajf014@gmail.com</a></li>
-    <li><strong>Github:</strong> <a href="#">ajf014</a></li>
-    <li><strong>Twitter:</strong> <a href="#">coming soon</a></li>
-  </ul>
-
-  <table>
-    <tr>
-      <th>Books</th>
-      <th>Movies</th>
-      <th>Games</th>
-    </tr>
-    <tr>
-      <td>The Hobbit</td>
-      <td>Hot Fuzz</td>
-      <td>Dark Souls</td>
-    </tr>
-    <tr>
-      <td>The Name of the Wind</td>
-      <td>The Avengers</td>
-      <td>The Last of Us</td>
-    </tr>
-    <tr>
-      <td>The Girl With All the Gifts</td>
-      <td>The Matrix</td>
-      <td>Dragon Age: Origins</td>
-    </tr>
-  </table>
-
+    <table border="1">
+        <thead>
+            <th colspan="4">Hobbies & Such</th>
+        </thead>
+        <thead>
+            <th>Books</th>
+            <th>Movies</th>
+            <th>TV Shows</th>
+            <th>Activities</th>
+        </thead>
+        <tr>
+            <td>Into the Wild</td>
+            <td>There Will Be Blood</td>
+            <td>Game of Thrones</td>
+            <td>Swimming</td>
+        </tr>
+        <tr>
+            <td>1984</td>
+            <td>The Thin Red Line</td>
+            <td>The Office</td>
+            <td>Biking</td>
+        </tr>
+        <tr>
+            <td>A Song of Ice and Fire</td>
+            <td>40 Year Old Virgin</td>
+            <td>The Wire</td>
+            <td>Running</td>
+        </tr>
+        <tfoot><strong>Thus Ends the Table!</strong></tfoot>
+    </table>
 </body>
-
 </html>
